created swagger doc block for form/view  route
